univention-management-console (11.0.5-24) unstable; urgency=medium

  * Bug #52371: make UMC-Server multiprocessing capable
  * Bug #52443: Remove expired sessions from saml cache
  * Bug #52442: store SAML identities in BDB database
  * Bug #52444: Clean up outstanding queries when receiving SAML response

 -- Florian Best <best@univention.de>  Mon, 30 Nov 2020 13:42:49 +0100

univention-management-console (11.0.5-23) unstable; urgency=medium

  * Bug #52297: Delay unnecessary UMC authentication after Single Sign
    on

 -- Florian Best <best@univention.de>  Thu, 19 Nov 2020 15:36:00 +0100

univention-management-console (11.0.5-21) unstable; urgency=medium

  * Bug #52323: make assertion.lifetime configurable

 -- Florian Best <best@univention.de>  Thu, 19 Nov 2020 14:38:15 +0100

univention-management-console (11.0.5-20) unstable; urgency=medium

  * Bug #52303: Mainscript

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 18 Nov 2020 14:28:35 +0100

univention-management-console (11.0.5-19) unstable; urgency=medium

  * Bug #52303: Mainscript

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 18 Nov 2020 00:03:17 +0100

univention-management-console (11.0.5-18) unstable; urgency=medium

  * Bug #52303: Mainscript

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 17 Nov 2020 22:45:32 +0100

univention-management-console (11.0.5-17) unstable; urgency=medium

  * Bug #52303: Fetching meta.json should involve UMC only if really needed

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 17 Nov 2020 20:45:16 +0100

univention-management-console (11.0.5-16) unstable; urgency=low

  * Bug #52316: prevent dropped connections between UMC web server and UMC
    server due to a racing condition in UMC server if the multi process
    mode is used

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 17 Nov 2020 16:25:36 +0100

univention-management-console (11.0.5-15) unstable; urgency=medium

  * Bug #52274: run UMC-Server with addditional UNIX socket
