@@ -66,6 +66,19 @@ print('\tHeader always setifempty "Content-Security-Policy" "%s"' % (csp,))
 @!@
 </LocationMatch>
 
+@!@
+if int(configRegistry.get('umc/http/processes', 1)) > 1:
+	start_port = configRegistry.get('umc/http/processes/start-port', 18200)
+	interface = configRegistry.get('umc/http/interface', '127.0.0.1')
+	print('Header add Set-Cookie "UMCWEB_ROUTEID=.%{BALANCER_WORKER_ROUTE}e; path=/" env=BALANCER_ROUTE_CHANGED')
+	print('<Proxy "balancer://umcwebcluster">')
+	for i in range(int(configRegistry.get('umc/http/processes'))):
+		print('\tBalancerMember "http://%s:%d" route=%s retry=0 timeout=%d' % (interface, i + start_port, i + 1, int(configRegistry.get('umc/http/response-timeout', '310')) + 1))
+	print('\tProxySet stickysession=UMCWEB_ROUTEID')
+	print('\tProxySet lbmethod=bybusyness')
+	print('</Proxy>')
+@!@
+
 <LocationMatch "^/(univention|univention-management-console)/(.*)$">
 	RequestHeader set X-UMC-HTTPS %{HTTPS}s
 	ErrorDocument 502 /error-univention
@@ -80,10 +93,14 @@ print('\tHeader always setifempty "Content-Security-Policy" "%s"' % (csp,))
 @!@
 port = int(configRegistry.get('umc/http/port', 8090))
 interface = configRegistry.get('umc/http/interface', '127.0.0.1')
-
-print('	ProxyPassMatch http://%s:%s/$2 retry=0 timeout=%d' % (interface, port, int(configRegistry.get('umc/http/response-timeout', '310')) + 1))
-print('	ProxyPassReverse http://%s:%s/' % (interface, port))
+if int(configRegistry.get('umc/http/processes', 1)) > 1:
+	print('\tProxyPass balancer://umcwebcluster/$2')
+	print('\tProxyPassReverse balancer://umcwebcluster')
+else:
+	print('\tProxyPassMatch http://%s:%s/$2 retry=0 timeout=%d' % (interface, port, int(configRegistry.get('umc/http/response-timeout', '310')) + 1))
+	print('\tProxyPassReverse http://%s:%s/' % (interface, port))
 @!@
+
 </LocationMatch>
 
 WSGIScriptAlias "/error-univention" "/usr/share/univention-management-console/error.py"
