@@ -3,3 +3,5 @@ univention-management-console-web-server	usr/sbin/
 09univention-management-console-web-server.uinst usr/lib/univention-uninstall/
 usr/share/univention-management-console/
 systemd/system/univention-management-console-web-server.service.d lib/systemd/system/
+systemd/system/univention-management-console-web-server-multiprocessing.target lib/systemd/system/
+systemd/system/univention-management-console-web-server@.service lib/systemd/system/
