@@ -1,0 +1,6 @@
+[Unit]
+Description=Start UMC-Web-Server in multiprocessing mode
+PartOf=univention-management-console-web-server.service
+
+[Install]
+WantedBy=multi-user.target
