@@ -1,0 +1,18 @@
+[Unit]
+Description=Univention Management Console Web Server
+After=network.target remote-fs.target univention-management-console-server.service
+Before=apache2.service
+PartOf=univention-management-console-web-server-multiprocessing.target
+BindsTo=univention-management-console-web-server-multiprocessing.target
+ReloadPropagatedFrom=univention-management-console-web-server-multiprocessing.target
+
+[Service]
+Type=forking
+PIDFile=/var/run/umc-web-server%i.pid
+ExecStart=/usr/sbin/univention-management-console-web-server start --port=%i
+ExecReload=/bin/kill -HUP $MAINPID
+User=root
+Group=root
+
+[Install]
+WantedBy=univention-management-console-web-server-multiprocessing.target
